Author: Matthew Good <trac@matt-good.net>
Maintainer: Steffen Hoffmann <hoff.st@web.de>

acct_mgr-0.5 (not yet released) - branch 0.11
 resolved issues
 * #8217: Race condition when creating new accounts
 * #10740: Checkbox columns are too wide on the Accounts: Cleanup page
 * #10754: Selected checkboxes should determine Accounts: Cleanup page items
 * #10772: ProgrammingError: operator does not exist: text = integer
 * #10829: Consider renaming 'Save' buttons to 'Apply changes'
 * #10910: Unable to change full name
 * #11038: Login fails due to issues with opening sibling Trac environments
 * #11090: Error on user creation "gaierror: [Errno -2] Name or service ..."
 * #11111: Please add a MANIFEST.in
 * #11213: The username input doesn't have focus when the page loads
 * #11312: Variable 'user' does not exist (in api.py)
 * #11469: Exceptions in AccountModule are not trapped in Trac 1.0.2dev
 * #11991: RegistrationError cannot initialize on Python 2.4
 * #12024: Username not inserted from admin panel
 * #12050: Ticket preferences are not saved
 * #12058: Bad email default regexp
 * #12067: Impossible to delete email
 * fix access to account properties clean-up from user admin panel
 * always show associated email in user details admin panel
 * fix and unify web-UI feedback on user and admin actions
 * prevent bypassing email address policy via user preferences
 * add modular user ID change support for Trac core as well as for some other
   Trac plugins, currently:
  * AnnouncerPlugin > 0.12.1
  * ScreenshotsPlugin (all versions)
  * TracFormsPlugin > v0.2
  * VotePlugin (all versions)

 new features
 * #843: Make admin approval required for account registration
 * #7426: Dynamicity of Trac (Show number of registered users)
 * #8930: Setup wizard for AcctMgr
 * #8595: Ability to ban accounts
 * #10684: Provide feedback when performing actions on the Users page
 * #10739: Move 'Back to Accounts' button to the contextual navigation